test_yuriiq/catalog/language/german/account/recurring.php
<?php

// text
$_['text_transaction_outstanding_failed']	= 'Outstanding payment failed';
$_['text_status_inactive']	= 'Inactive';
$_['text_account']	= 'Konto';
$_['text_transaction_cancelled']	= 'Cancelled';
$_['text_empty']	= 'Keine wiederkehrende Zahlung Profilen';
$_['text_transaction_suspended']	= 'Suspended';
$_['text_date_added']	= 'Created: ';
$_['text_transaction_outstanding_payment']	= 'Outstanding payment';
$_['text_status_suspended']	= 'Suspended';
$_['text_empty_transactions']	= 'Keine Transaktionen für dieses Profil';
$_['text_status_active']	= 'Active';
$_['text_recurring']	= 'Wiederkehrende Zahlungen';
$_['text_transaction_skipped']	= 'Payment skipped';
$_['text_quantity']	= 'Menge: ';
$_['text_recurring_id']	= 'Profile ID: ';
$_['text_transaction_failed']	= 'Payment failed';
$_['text_transaction_suspended_failed']	= 'Suspended from failed payment';
$_['text_transaction_created']	= 'Created';
$_['text_status']	= 'Status: ';
$_['text_order']	= 'Bestellung: ';
$_['text_transactions']	= 'Transaktionen';
$_['text_transaction_expired']	= 'Expired';
$_['text_status_cancelled']	= 'Cancelled';
$_['text_action']	= 'Aktion';
$_['text_recurring_description']	= 'Description: ';
$_['text_transaction_payment']	= 'Payment';
$_['text_status_pending']	= 'Pending';
$_['text_ref']	= 'Reference: ';
$_['text_product']	= 'Produkt: ';
$_['text_payment_method']	= 'Payment method: ';
$_['text_recurring_detail']	= 'Recurring payment details';
$_['text_status_expired']	= 'Expired';
$_['text_confirm_cancel']	= 'Sind Sie sicher, dass Sie das Profil löschen wollen?';

// error
$_['error_not_found']	= 'Could not cancel profile';
$_['error_not_cancelled']	= 'Error: %s';

// button
$_['button_continue']	= 'Fortsetzen';
$_['button_view']	= 'Anzeigen';
$_['button_cancel_profile']	= 'Abbrechen Zahlungen';
$_['button_return']	= 'Rückkehr';

// column
$_['column_amount']	= 'Menge';
$_['column_profile_id']	= 'Profil ID';
$_['column_created']	= 'Erstellt';
$_['column_type']	= 'Typ';
$_['column_product']	= 'Produkt';
$_['column_status']	= 'Status';
$_['column_action']	= 'Aktion';

// success
$_['success_cancelled']	= 'Recurring payment has been cancelled';

// heading
$_['heading_title']	= 'Wiederkehrende Zahlungen';
?>